apps/overlays/production/signconnect/ingress.yaml
# apps/overlays/production/signconnect/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signconnect-ingress-prod
  annotations:
    # Use the production Let's Encrypt issuer
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # Specify the nginx ingress class
    kubernetes.io/ingress.class: "nginx"
    # Enforce HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # Annotations for WebSocket support
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
    - hosts:
        #  production domain
        - signconnect.paulojauregui.com
      # cert-manager will store the certificate in this secret
      secretName: signconnect-prod-tls
  rules:
  - host: signconnect.paulojauregui.com # production domain
    http:
      paths:
      # Route traffic to the backend API
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: signconnect-backend-svc
            port:
              number: 8000
      # Route all other traffic to the frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: signconnect-frontend-svc
            port:
              number: 80
